Make faqs + responsive + fixing overflowing problem

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,11 @@ body
     font-style: italic;
 }
 
+.testing
+{
+    background-color: red;
+}
+
 /* -------------------------------------------- HEADER + VIEW PRICING BUTTON IN HERO -------------------------------------------- */
 
 header
